--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,19 +8,19 @@ repos:
       - id: check-added-large-files
       - id: debug-statements
 
-  - repo: https://github.com/python/black
+  - repo: https://github.com/psf/black
     rev: 23.3.0 # Ou a versão mais recente
     hooks:
       - id: black
         language_version: python3
-        args: [--line-length=79] # Configuração para a largura da linha
+        args: [--line-length=79]
 
-  - repo: https://github.com/isort/isort
+  - repo: https://github.com/pycqa/isort
     rev: v5.12.0 # Ou a versão mais recente
     hooks:
       - id: isort
         language_version: python3
-        args: [--profile=black] # Configuração para integração com Black
+        args: [--profile=black]
 
   - repo: https://github.com/pre-commit/mirrors-flake8
     rev: v6.2.0 # Ou a versão mais recente
@@ -29,7 +29,7 @@ repos:
         additional_dependencies:
           [flake8-docstrings, flake8-bugbear, flake8-comprehensions]
         language_version: python3
-        args: [--max-line-length=79] # Configuração para comprimento da linha
+        args: [--max-line-length=79]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.950 # Ou a versão mais recente
@@ -42,4 +42,4 @@ repos:
     hooks:
       - id: pylint
         language_version: python3
-        additional_dependencies: [pylint-django] # Adicionando plugin para Django
+        additional_dependencies: [pylint-django]
